# whoop-mcp-server

./: .gitignore  README.md  README.md.bak  claude-config.json  claude_desktop_config.json  fresh-config.json  mcp_config.json  new-claude-config.json  package.json  pyproject.toml  requirements.txt  run_basic_server.sh  run_server.sh  run_simple_server.sh  run_whoop_server.sh  run_whoop_server_v2.sh  start_mcp_server.sh  start_mcp_sse.sh  start_simple_server.sh  start_whoop_docs.sh  start_whoop_mcp_http.sh  start_whoop_server.sh  whoop_docs_server.py
config/: .env.example  tokens.json
nginx/: whoop-mcp.conf
pm2/: ecosystem.config.js
scripts/: README.md  authenticate_whoop.py  authenticate_whoop.py.bak  authenticate_whoop.sh
src/: basic_server.py  oauth_config_server.py  simple_mcp_server.py  whoop_http_server.py  whoop_http_server_v2.py  whoop_http_server_v2.py.backup  whoop_http_server_v2.py.bak2  whoop_mcp_http_server.py  whoop_mcp_http_server.py.bak  whoop_mcp_http_server.py.bak2  whoop_mcp_server.py  whoop_mcp_server.py.bak  whoop_mcp_sse_server.py  whoop_mcp_sse_server.py.backup  whoop_oauth_provider.py  whoop_server.py
storage/: oauth_auth_codes.json  oauth_clients.json
