[project]
name = "whoop-mcp-server"
version = "0.1.0"
description = "MCP server for Whoop API integration"
requires-python = ">=3.8"
dependencies = [
    "whoop",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
whoop-mcp-server = "whoop_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"] 